[package]
name = "t-2048"
version = "0.1.0"
authors = ["gopher9527 <gopher9527@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
crossterm = "0.19.0"
rand = "0.8.0"
tui = { version = "0.14.0", default-features = false, features = ['crossterm'] }
lazy_static = "1.4.0"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.64"
sled = "0.34.6"
slice_as_array = "1.1.0"
